Movie -> Video xi -> $\xi$ Fix references in System design Describe fig:acidification b and inset

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -49,7 +49,7 @@ There are many ways and reasons for a film to wrinkle. An elastic film buckles d
 
 Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situation. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}.
 
-Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Bremer1989} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Movies 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
+Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Bremer1989} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Videos 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
 \begin{figure}[ht!]
 	\includegraphics{dynamics}%
@@ -69,26 +69,26 @@ The main goal of the present study is thus to identify the selection mechanism o
 \end{figure}
 
 
-To form wrinkled patterns such as the one oberved in figure 1XXX, ones needs to take advantage of the pH sensitivity of caseins to control the route to gelation, to fine tune the gel properties and the boundary conditions.
+To form wrinkled patterns such as the one observed in figure~\ref{fig:dynamics}, ones needs to take advantage of the pH sensitivity of caseins to control the route to gelation, to fine tune the gel properties and the boundary conditions.
 
-The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary movie 3XXX shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH= XXX to XXX and finaly at pH=XXX the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary movie 4XXX. The state diagram of caseins as a function of the pH  is related to charge stabilization. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH=4.5), caseins molecules loose their negative net charge and tend to stick to each other [ref XXX casein stability]. Beyond the isoelectric point casein acquire a positive net charge and therefore partially re-dissolve. In figure 2cXXX, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drop to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is XXX.
+The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video 3 shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH=5.5 to 4 and finaly at pH=3 the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary Video 4. The state diagram of caseins as a function of the pH is related to charge stabilization. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.5$), caseins molecules loose their negative net charge and tend to stick to each other [ref XXX casein stability]. Beyond the isoelectric point casein acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drop to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
-To form a space spanning gel, flocculation need to be prevented. We use of Glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, fig.2aXXX. This GDL controlled acidification permits the formation of a bulk gel phase. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time. the mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa.
+To form a space spanning gel, flocculation need to be prevented. We use of Glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Fig.~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoeletric point and $x_\text{free}$ rises again. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa. This finite value indicates that the sample is still a gel.
 
-To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in supplementary fig. 1XXX the gel consist in a space spanning fractal network with a cut off length scale xi. xi corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Fig. 2cXXX, up to the isolectric point xi increases up to a maximum length of 7 $\mu$m due to the solvent expulsion out of the casein network [refXXX]. This stiffen the arm of the network and is responsible for the increase of elasticity. Beyond the isoelectric point xi decreases down to 4$\mu$m. Casein regain solubility [refXXX], the strand network swell, the pore shrinks and the gel weakens.
+To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consist in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network [refXXX]. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As casein regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
 
-As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we have embedded the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer [refXXX]. In the supplementary figure XXX, we observe that the aqueous buffer goes through the gel and rise in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: 67000 nm$^2$.
+XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we have embedded the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer [refXXX]. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rise in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
-Boundary conditions is the final parameter that is essential to form wrinkled patterns. The evolution of xi when sticky boundaries are on reflects the inner constrains of the gel:  xi increases, the stand of the network become thinner and the gel wants to retract; then xi decreases, the stands of network swell and the gel wants to expend. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detach from the top wall. In this situation we can monitor xi, fig. XXX. xi remains mostly constant and the major effect is reported on the volume occupied by the gel as will be reported below.
+Boundary conditions is the final parameter that is essential to form wrinkled patterns. The evolution of $\xi$ when sticky boundaries are on reflects the inner constrains of the gel:  $\xi$ increases, the stand of the network become thinner and the gel wants to retract; then $\xi$ decreases, the stands of network swell and the gel wants to expend. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detach from the top wall. In this situation we can monitor $\xi$, Fig.~\ref{fig:acidification}d. $\xi$ remains mostly constant and the major effect is reported on the volume occupied by the gel as will be reported below.
 
 
-%We coat the glass slides with acrylamide brushes to prevent the adhesion of the casein. In fig.2c, when the top slide of the optical cell is coated with acrylamide brushes, we then observe that the casein network detaches from the top slide. xi does not peak at the isoelectric point but remains constant
+%We coat the glass slides with acrylamide brushes to prevent the adhesion of the casein. In fig.2c, when the top slide of the optical cell is coated with acrylamide brushes, we then observe that the casein network detaches from the top slide. $\xi$ does not peak at the isoelectric point but remains constant
 
 %Boundary conditions is the final parameter that is essential to form wrinkled patterns. Once the space spanning network is formed and sticks to the container, protein attraction can only proceed by local shrinking of the protein agregates, leading to larger pores.
 
-%The difference in value of xi between the fully un-coated  and the half-coated optical cell demonstrate that the gel is subject to constrains as the pH decreases. The relaxation of thoses constrain is key to the wrinkling formation when both the top and bottom slide are coated with acrylamide brushes.
+%The difference in value of $\xi$ between the fully un-coated  and the half-coated optical cell demonstrate that the gel is subject to constrains as the pH decreases. The relaxation of thoses constrain is key to the wrinkling formation when both the top and bottom slide are coated with acrylamide brushes.
 
 %on a change les condition daccroche ce aui permet au contrainte de se relacher 
 
@@ -483,27 +483,27 @@ i & 4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 
 \end{table*}
 
 
-\subsection*{Supplementary movies}
+\subsection*{Supplementary Videos}
 
 \begin{description}
-\item[Movie 1] Transmitted light microscopy images of the pattern formation in a 4\%w casein and 4\%w GDL aqueous dispersion. Top and bottom slides of the optical cell are coated with acrylamide brushes. The duration of the movie is 2~h~30. The scale bar is \SI{1}{\milli\metre}.
+\item[Video 1] Transmitted light microscopy images of the pattern formation in a 4\%w casein and 4\%w GDL aqueous dispersion. Top and bottom slides of the optical cell are coated with acrylamide brushes. The duration of the Video is 2~h~30. The scale bar is \SI{1}{\milli\metre}.
 
-\item[Movie 2] 3D reconstruction of the pattern formation using confocal microscopy in a 4\%w casein and 4\%w GDL aqueous dispersion (Supplementary Table~\ref{tab:data}c). Top and bottom slides of the optical cell are coated with acrylamide brushes. The duration of the movie is 2~h~30. The scale bar is \SI{1}{\milli\metre}.
-
-
-\item[Movie 3] Titration of a dispersion with 1\%w casein by 1 molar HCl. The duration of the movie is \SI{13}{\minute}. The scale bar is XXX $\mu$m
+\item[Video 2] 3D reconstruction of the pattern formation using confocal microscopy in a 4\%w casein and 4\%w GDL aqueous dispersion (Supplementary Table~\ref{tab:data}c). Top and bottom slides of the optical cell are coated with acrylamide brushes. The duration of the Video is 2~h~30. The scale bar is \SI{1}{\milli\metre}.
 
 
-\item[Movie 4] Titration of a dispersion with 4\%w casein by 1 molar HCl. The duration of the movie is \SI{14}{\minute}. The scale bar is XXX $\mu$m
+\item[Video 3] Titration of a dispersion with 1\%w casein by 1 molar HCl. The duration of the Video is \SI{13}{\minute}. The scale bar is XXX $\mu$m
 
 
-\item[Movie 5] Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when sticky boundary are on. 1/10th of the proteins are fluorescently labelled. The duration of the movie is \SI{132}{\minute}. The scale bar is \SI{10}{\micro\metre}.
+\item[Video 4] Titration of a dispersion with 4\%w casein by 1 molar HCl. The duration of the Video is \SI{14}{\minute}. The scale bar is XXX $\mu$m
 
-\item[Movie 6] Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when the top wall is coated with acrylamide brushes and the bottom wall remains sticky. 1/10th of the proteins are fluorescently labelled. The duration of the movie is \SI{147}{\minute}. The scale bar is \SI{10}{\micro\metre}.
 
-\item[Movie 7] Confocal microscopy $(x,z)$ cut of the evolution of the gel sheet deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes (Supplementary Table~\ref{tab:data}a). The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel starts close to the bottom wall, $H<H^*$. Darcy mechanism dominates the formation of the primary pattern. Total duration of the video is 145 min.
+\item[Video 5] Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when sticky boundary are on. 1/10th of the proteins are fluorescently labelled. The duration of the Video is \SI{132}{\minute}. The scale bar is \SI{10}{\micro\metre}.
 
-\item[Movie 8] Confocal microscopy $(x,z)$ cut of the evolution of the gel sheet deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes (Supplementary Table~\ref{tab:data}c). The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel starts far from either top or bottom wall, $H>H^*$. Poiseuille mechanism dominates the formation of the primary pattern. Total duration of the video is 181 min.
+\item[Video 6] Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when the top wall is coated with acrylamide brushes and the bottom wall remains sticky. 1/10th of the proteins are fluorescently labelled. The duration of the Video is \SI{147}{\minute}. The scale bar is \SI{10}{\micro\metre}.
+
+\item[Video 7] Confocal microscopy $(x,z)$ cut of the evolution of the gel sheet deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes (Supplementary Table~\ref{tab:data}a). The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel starts close to the bottom wall, $H<H^*$. Darcy mechanism dominates the formation of the primary pattern. Total duration of the video is 145 min.
+
+\item[Video 8] Confocal microscopy $(x,z)$ cut of the evolution of the gel sheet deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes (Supplementary Table~\ref{tab:data}c). The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel starts far from either top or bottom wall, $H>H^*$. Poiseuille mechanism dominates the formation of the primary pattern. Total duration of the video is 181 min.
 
 \end{description}
 
