SI dans Dynamics of the wrinkling process

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -77,7 +77,7 @@ The stability of caseins dispersion strongly depend on the pH of the solution. S
 
 To form a space spanning gel, flocculation need to be prevented. We use of Glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Fig.~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoeletric point and $x_\text{free}$ rises again. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa. This finite value indicates that the sample is still a gel.
 
-To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consist in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network [refXXX]. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As casein regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
+To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consist in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network [refXXX]. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As caseins regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
 
 XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we have embedded the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer [refXXX]. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rise in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
@@ -97,7 +97,7 @@ Boundary conditions is the final parameter that is essential to form wrinkled pa
 
 \section*{Dynamics of the wrinkling process}
 
-Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated, a configuration favourable to wrinkling. Up to 10 min the dispersion is homogeneous and fills the entire slit. The black margins correspond to the glass walls. Around 23 min, the gel forms and simultaneously becomes thinner and more concentrated - the fluorescence signal which is proportional to the casein concentration is brighter compared to the situation at 10min. This effect is the fingerprint of syn\ae{}resis: as gelation proceeds, the solvent is expelled on both the upper and lower sides. We describe sample as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thickness $H_1$ and $H_2$ in a cell of thickness $e=H_1+h+H_2$ (Fig.~\ref{fig:sideview}b). Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}c) and excess surface area of the gel film (Fig.~\ref{fig:sideview}d) (see Supplementary Methods). As expected from the system design, the evolution of the volume is non-monotonous. After reaching a minimum around 35\% of its initial value at 23 min, the volume increases. Shortly after,  at 36 min, the planar film destabilizes and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability is due to swelling. Around 38 min, the amplitude of the wrinkles reach the thickness of the slit. The size of the primary pattern is now settled Supplementary Fig. \ref{fig:patterns, fig:growth}. However swelling continues, the gel flattens on both top and bottom walls (44 min) and finally buckles back (53 min) to form the secondary pattern (1h21). When the excess volume saturates, the dynamics stops. The amount of GDL controls the ability of the gel to swell: at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we have observe the formation of higher order patterns. 
+Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated, a configuration favourable to wrinkling (see also Supplementary Videos 7 and 8). Initially the dispersion is homogeneous and fills the entire slit. The black margins correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated - the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syn\ae{}resis: as gelation proceeds, the solvent is expelled on both the upper and lower sides. We describe sample as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thickness $H_1$ and $H_2$ in a cell of thickness $e=H_1+h+H_2$ (Fig.~\ref{fig:sideview}b). Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}c) and excess surface area of the gel film (Fig.~\ref{fig:sideview}d) (see Supplementary Methods). As expected from the system design, the evolution of the volume is non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after,  at \SI{36}{\minute}, the planar film destabilizes and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reach the thickness of the slit. The size of the primary pattern is now settled, Supplementary Figures~\ref{fig:patterns} and \ref{fig:growth}. However swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (1h21). When the excess volume saturates, the dynamics stops. The amount of GDL controls the ability of the gel to swell: at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we have observe the formation of higher order patterns. 
 
 Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated with acrylamide brushes. We also confirmed that at any given point in time and space the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is therefore not due to thickness inhomogeneities but to altitude gradients. Indeed the length of the optical path along the vertical direction $z$ through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}b.
 
